2002-11-06  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/printer/*: Recommended driver "hpijs" and "Perfectly"
	  for HP Color LaserJet 5 and 5000.

2002-11-02  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/printer/*: Added the HP DeskJet 3425, 3810, 3816,
	  3822.
	
	* db/source/printer/*: Changed recommended driver to "hpijs"
	  when it was "hpijs-rss" before (the new modes are in the
	  official HPIJS now). Text updates concerning HPIJS 1.3,
	  HP DeskJet 3320 and 3420 re-rated from "Paperweight" to
	  "Mostly".

2002-10-30  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/driver/lm1100.xml: URL and text updated (driver
	  re-hosted on linuxprinting.org).
	
2002-10-26  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/opt/Minolta-PCL600.xml: Added PJL option to activate
	  the 600-dpi mode of the Minolta PagePro 8L.

	* db/source/printer/*: Text improvements of the Minolta printer
	  entries, upgraded the Minolta PagePro 8L from "Partially" to
	  "Perfectly".
	
2002-10-24  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/printer/HP-OfficeJet_R40.xml: Added the HP OfficeJet
	  R40.

2002-10-23  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/opt/183.xml: Fixed default of "Binding" PJL option. it
	  must be "Long Edge" and not "Short Edge".

2002-10-23  Tim Waugh  <twaugh@redhat.com>

	* db/source/printer/175232.xml, db/source/printer/530418.xml,
	  db/source/printer/60928.xml, db/source/printer/620306.xml,
	  db/source/printer/63040.xml, db/source/printer/635698.xml,
	  db/source/printer/64576.xml, db/source/printer/72000.xml,
	  db/source/printer/99616.xml,
	  db/source/printer/HP-DeskJet_630C.xml,
	  db/source/printer/HP-DeskJet_825C.xml,
	  db/source/printer/HP-PhotoSmart_P100.xml: Added autodetection
	  entries from the hpijs driver (models.cpp).

2002-10-22  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/opt/63.xml: Fixed default value ID.

2002-10-19  Till Kamppeter <till.kamppeter@gmx.net>
