@@ -1,12 +1,13 @@
 <driver id="driver/lpstyl">
  <name>lpstyl</name>
- <url>http://www.linuxprinting.org/download/printing/stylewriter.tar.gz</url>
+ <url>http://homepage.mac.com/monroe/styl/</url>
  <execution>
   <filter />
   <prototype>gs -q -dBATCH -dPARANOIDSAFER -dQUIET -dNOPAUSE -r360x360 %E%F</prototype>
  </execution>
  <comments>
   <en>
+
     This driver is a little bit special, the printer is connected by
     the serial port and the driver asks the printer which model it
     is. So the connection between driver and printer must be
@@ -21,10 +22,6 @@
     under the choices, use the "Link stylewriter in dev ..."  option
     and set a link of your device file to /dev/stylewriter.&lt;p&gt;
     
-    The original home page of the driver does not exist any more, To
-    make the driver available I (Till) have put version 0.9.9 (which I
-    have downloaded for including in Mandrake Linux a year ago) into
-    the download area of linuxprinting.org.
   </en>
  </comments>
  <printers>
