@@ -26,6 +26,15 @@
     gamma correction of CUPS, or use the 600dpi resolution (native
     resolution of the printer).&lt;p&gt;
 
+    From the Z31 there came out models which need different margin
+    settings. If the print head of your Z31 goes over the end of its
+    rails and makes strange noise, use the
+    &quot;&lt;tt&gt;-dz31m=&lt;/tt&gt;&lt;i&gt;x&lt;/i&gt;&quot;
+    option where &lt;i&gt;x&lt;/i&gt; is an integer number adjusting
+    the margins. Default (when not using the option) is 100, You
+    should try something like 300, but other values can also
+    apply.&lt;p&gt;
+
     The Compaq IJ750 is a rebadged Lexmark 3200, so use it with
     &quot;&lt;tt&gt;-dmodel=0&lt;/tt&gt;&quot;.&lt;p&gt;
 
