@@ -1,0 +1,30 @@
+<option type="int" id="opt/lxm3200-tweaked-Z31Margin">
+  <!-- A multilingual <comments> block can appear here, too;
+       it should be treated as documentation for the user. -->
+  <arg_longname>
+   <en>Margin adjustment (Z31)</en>
+  </arg_longname>
+  <arg_shortname>
+   <en>Z31Margin</en><!-- backends only know <en> shortnames! -->
+  </arg_shortname>
+  <arg_execution>
+   <arg_order>60</arg_order>
+   <arg_spot>A</arg_spot>
+   <arg_substitution />
+   <arg_proto> -dz31m=%s</arg_proto>
+  </arg_execution>
+  <constraints>
+     <constraint sense="true">
+      <make>Lexmark</make>
+      <model>Z31</model>
+      <driver>lxm3200-tweaked</driver>
+      <arg_defval>100</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <driver>lxm3200-tweaked</driver>
+      <arg_defval>100</arg_defval>
+     </constraint>
+  </constraints>
+  <arg_max>-1000</arg_max>
+  <arg_min>1000</arg_min>
+</option>
