@@ -1,3 +1,13 @@
+2002-11-07  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* db/source/driver/lxm3200-tweaked.xml,
+	  db/source/opt/lxm3200-tweaked-Z31Margin.xml: Added margin
+	  adjustment for the Lexmark Z31, see
+	  https://sourceforge.net/tracker/?func=detail&atid=218073&aid=634091&group_id=18073
+
+	* db/source/driver/lpstyl.xml: Inserted new URL for the "lpstyl"
+	  driver.
+	
 2002-11-06  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* db/source/printer/*: Recommended driver "hpijs" and "Perfectly"
